# claude-code-python

./: .env.example  .gitignore  README.en.md  README.md  README.zh-CN.md  llms.txt  pyproject.toml
demo/: skill.py
demo/claude-code-plugin/.claude-plugin/: plugin.json
demo/claude-code-plugin/skills/ai-friendly-evaluate/: SKILL.md
demo/claude-code-plugin/skills/ai-friendly-evaluate/assets/: appendix-calculation-template.md  appendix-context-template.md  appendix-risks-template.md  appendix-scoring-details-template.md  batch-intake-questionnaire.md  batch-subagent-dispatch-template.md  batch-summary-template.md  evaluation-report-template.md  intake-questionnaire.md
demo/claude-code-plugin/skills/ai-friendly-evaluate/references/: lark-ai-friendly-scoring-v0.2.md  rubric-quick-map.md  shared-evidence-collection.md  shared-report-artifacts.md  shared-runtime-cleanup.md  shared-scoring-and-calculation.md  (+1 more)
demo/claude-code-plugin/skills/ai-friendly-score-parser/: SKILL.md
docs/: design.md
docs/e2e/: design.md
docs/parser/: design.md
src/claude_code/: __init__.py  _client.py  _exec.py  _options.py  _raw_event_log.py  _session.py
src/claude_code/parser/: __init__.py  events.py  parse.py  protocol.py  translator.py  writer.py
tests/e2e/: config.py  harness.py  reporters.py
tests/e2e/cases/: test_real_cli.py
tests/fixtures/: fake_claude.py
tests/unit/: __init__.py  test_demo_skill.py  test_e2e_harness.py  test_exec.py  test_raw_event_log.py  test_session.py
tests/unit/parser/: test_extract_content.py  test_parse.py  test_translator.py  test_writer.py
(+370 files in other folders)
