[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-python"
version = "0.0.1"
description = "Python SDK clone for Claude Code CLI"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
